Updated for Xamarin.AndroidIconics

--- a/com.xamarin.component.MaterialDrawer/Resources/layout/material_drawer.axml
+++ b/com.xamarin.component.MaterialDrawer/Resources/layout/material_drawer.axml
@@ -3,12 +3,11 @@
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
-    <!--
+<!--
     the clickable here should fix the hanging which occurs sometimes
     http://stackoverflow.com/questions/18044277/android-navigation-drawer-bug-using-the-sample
     -->
-    <com.mikepenz.materialdrawer.view.ScrimInsetsFrameLayout
+    <com.xamarin.component.MaterialDrawer.Views.ScrimInsetsFrameLayout
         android:clickable="true"
         android:id="@+id/content_layout"
         android:layout_width="match_parent"
