--- a/com.xamarin.component.MaterialDrawer/Resources/layout/material_drawer_item_profile.axml
+++ b/com.xamarin.component.MaterialDrawer/Resources/layout/material_drawer_item_profile.axml
@@ -9,8 +9,8 @@
     android:paddingRight="@dimen/material_drawer_vertical_padding"
     android:paddingEnd="@dimen/material_drawer_vertical_padding">
 
-    <com.mikepenz.materialdrawer.view.BezelImageView
-        android:id="@+id/profileIcon"
+  <com.xamarin.component.MaterialDrawer.Views.BezelImageView
+      android:id="@+id/profileIcon"
         android:layout_width="@dimen/material_drawer_item_profile_icon"
         android:layout_height="@dimen/material_drawer_item_profile_icon"
         android:layout_marginTop="@dimen/material_drawer_item_profile_icon_padding"
